feat: revise category controller n swagger
